fix : overlap between navbar and content

--- a/public/css/editprofile.css
+++ b/public/css/editprofile.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: calc(100vh - 4.5rem);
-    padding-top: 10rem;
+    padding-top: 20rem;
 }
 
 .edit-profile,
@@ -129,7 +129,7 @@
     
     .edit-profile {
         flex-direction: row; 
-        padding-top: 3rem;
+        padding-top: 10rem;
         justify-content: space-between; 
     }
 
